--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "gh-pages": "^6.3.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-rapide": "^1.0.35"
+    "react-rapide": "^1.0.35",
+    "react-router": "^7.8.2",
+    "react-router-dom": "^7.8.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
